--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.1",
+    "axios": "^1.7.2",
     "babel-eslint": "^10.1.0",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
@@ -19,8 +23,10 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "webpack": "^5.92.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
