--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-owl-carousel": "^2.3.3",
     "react-redux": "^9.1.2",
+    "react-slider": "^2.0.6",
     "redux": "^5.0.1",
     "webpack": "^5.92.0"
   },
