--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "babel-eslint": "^10.1.0",
+    "cookie": "^0.6.0",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "next": "^14.2.3",
