--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-slider": "^2.0.6",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "webpack": "^5.92.0"
   },
   "devDependencies": {
